Fix nav and some spacing issues. Project complete.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,6 +48,9 @@ nav span {
   margin: 20px;
 }
 
+a {
+  color: white;
+}
 
 /*MAIN CONTENT*/
 /**************************************/
@@ -88,11 +91,12 @@ nav span {
   flex-direction: column;
   align-items: center;
   max-width: 1000px;
-  margin: 60px 20px;
+  margin: 0px 20px 60px 20px;
 }
 
 .teaofthemonthtext {
   text-align: center;
+  margin-top: 69px;
 }
 
 .teaofthemonthteas {
